#
# Makefile.am
# automake template for netstat/src/
# Author:  David Cantrell <david.l.cantrell@gmail.com>
#

bin_PROGRAMS = netstat

netstat_SOURCES = netstat.c statistics.c proc.c af.c unix.c util.c \
                  sockets.c getroute.c interface.c hw.c loopback.c \
                  nstrcmp.c
